// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parseSEISReport — ~5 metadata rows above the header matches the golden snapshot 1`] = `
{
  "errors": [
    {
      "message": "Sheet "Student Goals": Could not detect student name or grade columns. Looking for columns like: First Name, Last Name, Grade, Student Name.",
      "row": 0,
    },
  ],
  "metadata": {
    "goalsFiltered": 0,
    "sheetsProcessed": [
      "Student Goals",
    ],
    "totalRows": 1,
  },
  "students": [],
  "warnings": [],
}
`;

exports[`parseSEISReport — header on row 1 (row-skip fixed) matches the golden snapshot (all rows, one goal per row) 1`] = `
{
  "errors": [],
  "metadata": {
    "goalsFiltered": 0,
    "sheetsProcessed": [
      "Student Goals",
    ],
    "totalRows": 7,
  },
  "students": [
    {
      "firstName": "Ana",
      "goals": [
        "By 5/1/2027, given a grade-level passage, Ana will read 90 words per minute with 95% accuracy in 3 of 4 trials.",
      ],
      "gradeLevel": "1",
      "iepDate": "2026-05-01",
      "initials": "AA",
      "lastName": "Alvarez",
      "rawRow": 2,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Ben",
      "goals": [
        "By 10/15/2026, given manipulatives, Ben will solve two-digit addition problems with 80% accuracy across 3 sessions.",
      ],
      "gradeLevel": "2",
      "iepDate": "2025-10-15",
      "initials": "BB",
      "lastName": "Bishop",
      "rawRow": 3,
      "schoolOfAttendance": "St Mary School",
    },
    {
      "firstName": "Cora",
      "goals": [
        "By 1/20/2027, Cora will produce /r/ in structured sentences with 80% accuracy in 4 of 5 trials.",
      ],
      "gradeLevel": "3",
      "iepDate": "2026-01-20",
      "initials": "CC",
      "lastName": "Cho",
      "rawRow": 4,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Drew",
      "goals": [
        "By 2/10/2027, Drew will use a coping strategy when frustrated in 4 of 5 observed opportunities.",
      ],
      "gradeLevel": "4",
      "iepDate": "2026-02-10",
      "initials": "DD",
      "lastName": "Diaz",
      "rawRow": 5,
      "schoolOfAttendance": "Out of District- MOU",
    },
    {
      "firstName": "Ella",
      "goals": [
        "By 3/5/2027, Ella will copy a five-word sentence legibly within 5 minutes in 4 of 5 trials.",
      ],
      "gradeLevel": "5",
      "iepDate": "2026-03-05",
      "initials": "EE",
      "lastName": "Evans",
      "rawRow": 6,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Finn",
      "goals": [
        "By 4/12/2027, Finn will form lower-case letters with correct size and spacing in 4 of 5 samples.",
      ],
      "gradeLevel": "TK",
      "iepDate": "2026-04-12",
      "initials": "FF",
      "lastName": "Foster",
      "rawRow": 7,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Gia",
      "goals": [
        "By 5/9/2027, Gia will raise her hand and wait to be called on in 4 of 5 opportunities.",
      ],
      "gradeLevel": "1",
      "iepDate": "2026-05-09",
      "initials": "GG",
      "lastName": "Gomez",
      "rawRow": 8,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
  ],
  "warnings": [],
}
`;

exports[`parseSEISReport — title rows then header on row 3 matches the golden snapshot 1`] = `
{
  "errors": [],
  "metadata": {
    "goalsFiltered": 0,
    "sheetsProcessed": [
      "Student Goals",
    ],
    "totalRows": 3,
  },
  "students": [
    {
      "firstName": "Ana",
      "goals": [
        "By 5/1/2027, given a grade-level passage, Ana will read 90 words per minute with 95% accuracy in 3 of 4 trials.",
      ],
      "gradeLevel": "1",
      "iepDate": "2026-05-01",
      "initials": "AA",
      "lastName": "Alvarez",
      "rawRow": 4,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
    {
      "firstName": "Ben",
      "goals": [
        "By 10/15/2026, given manipulatives, Ben will solve two-digit addition problems with 80% accuracy across 3 sessions.",
      ],
      "gradeLevel": "2",
      "iepDate": "2025-10-15",
      "initials": "BB",
      "lastName": "Bishop",
      "rawRow": 5,
      "schoolOfAttendance": "St Mary School",
    },
    {
      "firstName": "Cora",
      "goals": [
        "By 1/20/2027, Cora will produce /r/ in structured sentences with 80% accuracy in 4 of 5 trials.",
      ],
      "gradeLevel": "3",
      "iepDate": "2026-01-20",
      "initials": "CC",
      "lastName": "Cho",
      "rawRow": 6,
      "schoolOfAttendance": "Mt Diablo Elementary School",
    },
  ],
  "warnings": [],
}
`;
